--- a/Project/css/contextMenu.css
+++ b/Project/css/contextMenu.css
@@ -66,3 +66,12 @@
     color: rgba(255, 255, 255, 0.5);
     background-color: transparent;
 }
+
+.context-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
