--- a/Project/css/block.css
+++ b/Project/css/block.css
@@ -46,10 +46,14 @@
 }
 
 .block-x > .block > .x {
+    position: absolute;
+    top: 0;
+    left: 0;
+
     width: 100%;
     height: 100%;
 
-    background-color: gray;
+    background-color: rgba(0, 0, 0, 0.5);
     background-image: url(../assets/Forbidden.svg);
     background-repeat: no-repeat;
     background-size: 80% 80%;
