--- a/Project/css/window-alert.css
+++ b/Project/css/window-alert.css
@@ -1,6 +1,7 @@
 .alert-content {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 200;
 
     max-width: 680px;
     
