--- a/Project/css/window.css
+++ b/Project/css/window.css
@@ -3,7 +3,8 @@
 
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.8);
+    opacity: 0;
 
     min-width: 700px;
     width: max-content;
@@ -11,7 +12,7 @@
     min-height: 250px;
     height: min-content;
 
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(50px);
 
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -21,6 +22,8 @@
 
     box-sizing: border-box;
     /* padding: 5px; */
+
+    transition: transform 250ms, opacity 250ms;
 }
 
 .window-main > .window-head {
@@ -47,4 +50,15 @@
 
 .window-main > .window-head > .window-head-close {
     cursor: pointer;
+}
+
+.window-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0, 0, 0, 0.5);
 }
