--- a/Project/css/main.css
+++ b/Project/css/main.css
@@ -1,7 +1,7 @@
 * {
     font-family: 'Spoqa Han Sans Neo';
 
-    /* -webkit-user-select: none;
+    -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -o-user-select: none;
@@ -10,7 +10,7 @@
     -khtml-user-drag: none;
     -moz-user-drag: none;
     -o-user-drag: none;
-    user-drag: none; */
+    user-drag: none;
 }
 
 body {
